bug correction
